--- a/index.html
+++ b/index.html
@@ -72,17 +72,8 @@
           <img src="images/des1.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
-          <img src="images/foto1.jpg" style="width:100%">
+          <img src="images/des2.jpg" style="width:100%">
         </div>         
-        <div class="mySlides fade">
-          <img src="images/foto2.jpg" style="width:100%">
-        </div>        
-        <div class="mySlides fade">
-          <img src="images/foto3.jpg" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-          <img src="images/foto4.jpg" style="width:100%">
-        </div>    
       </div>
 
       <!-- Next and previous buttons-->
